Ajuste de testes e atualização do operacoes-postman.json